--- a/crates/anvil/Cargo.toml
+++ b/crates/anvil/Cargo.toml
@@ -28,6 +28,7 @@ foundry-common.workspace = true
 foundry-config.workspace = true
 foundry-evm.workspace = true
 foundry-evm-networks.workspace = true
+tower_http = { version = "0.5.2", features = ["cors"] }
 
 # alloy
 alloy-evm = { workspace = true, features = ["call-util"] }
